dxvk-gpl-async-test v2.5.1+

--- a/meson.build
+++ b/meson.build
@@ -195,7 +195,7 @@ glsl_generator = generator(
 )
 
 dxvk_version = vcs_tag(
-  command: ['git', 'describe', '--dirty=+'],
+  command: ['git', 'describe', '--dirty=-2-gplasync'],
   input:  'version.h.in',
   output: 'version.h',
 )
